--- a/css/style.scss
+++ b/css/style.scss
@@ -56,20 +56,17 @@ h2 {
 
 // NAVIGATION
 #nav {
-  position: sticky;
-  top: 0;
+  width: 100vw;
   height: 60px;
-
   padding-left: $page-padding;
   padding-right: $page-padding;
-
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   background-color: $col-dark;
   box-shadow: 5px 0px 3px $col-dark;
-
   z-index: 5;
 }
 .nav-logo {
@@ -307,10 +304,11 @@ ul a {
     margin-bottom: 32px;
     display: flex;
     flex-wrap: wrap;
-
     &--nowrap {
       flex-wrap: nowrap;
       overflow-x: scroll;
+    }
+    &--mw {
     }
   }
   .option-box {
@@ -407,7 +405,7 @@ ul a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    opacity: 0.5;
+    opacity: 0.7;
     z-index: -1;
   }
   .hero-text-container {
